PDS-314: Bug fix scrollbar

--- a/assets/sass/custom/_sidebar.scss
+++ b/assets/sass/custom/_sidebar.scss
@@ -5,11 +5,15 @@
   bottom: 0;
   width: 100%;
   max-width: 100px;
-  overflow-y: auto;
+  overflow-y: hidden;
   padding-left: 0;
   padding-right: 0;
   box-shadow: none;
   z-index: 1000;
+
+  .scrollbar-inner:not(.ps) {
+    overflow-y: auto !important;
+  }
 
   + .main-content{
     margin-left: 100px;
@@ -43,12 +47,12 @@
         background: $primary;
       }
       &:hover{
-          background-color: $primary;
-          transition: all 0.175s ease-in-out;
+        background-color: $primary;
+        transition: all 0.175s ease-in-out;
 
-          a.sidebar-menu-item{
-            color: white;
-          }
+        a.sidebar-menu-item{
+          color: white;
+        }
       }
       .pd-icon{
         font-size: 16px;
